# Apks

./: .gitignore  Bot present.md  README.md  Rule_no_1  setup_env.sh
Agents/: Agent_101.md  Agent_173.md  BOT_QUICKSTART.md  agent_bot.py  aios-agent.service.template  orchestrator.sh  start_agent.sh
combine/: README.md  build.gradle.kts  settings.gradle.kts
combine/app/src/main/jni/: CMakeLists.txt  rezuku_stub.cpp
docs/: AIOS_MIGRATION_FINAL_SUMMARY.md  AIOS_Messaging_System_Architecture.md  AIOS_Migration_Plan.md  AIOS_REPOSITORY_AUDIT_AND_ALIGNMENT_PLAN.md  AIOS_Roadmap_v2.md  Legacy_Inventory_and_Migration_Proposal.md  decryption_guide.md  encrypted_pat.md
instruction/: TAgent Bootstrap Prompt - agent_10x.md
instructions/: AGENT_SPEC.md  COMMUNICATION_STYLE.md  COORDINATION.md  DIRECTORY_SPEC.md  MESSAGE_SPEC.md  README.md  REPORT_SPEC.md  TASK_SPEC.md  WORKFLOW.md
memory/: AI_BRAIN.md  Name_memory.txt  agent_101_memory.txt  agent_103_memory.txt  agent_107_memory.txt  agent_173.txt  agent_name_memory.txt  problem&solution-chat4.md  problem&solution.md
message/: README.md
reports/: REPORT-TASK-20260628-0001-task_manager.md  REPORT-TASK-20260628-0002-task_manager.md  REPORT-TASK-20260628-0002_progress.md  REPORT-TASK-20260628-0003-agent_101_test.md  REPORT-TASK-20260628-0005-task_manager.md  REPORT-TASK-20260628-0007-task_manager.md  REPORT-TASK-20260628-0008-task_manager.md  REPORT-TASK-20260701-0001-agent_173.md  agent_101_apk_optimization_research_report.md  agent_101_bsc_nursing_notes_report.md  agent_101_nextgen_apk_optimization_report.md  (+2 more)
(+253 files in other folders)
